--- a/wtfamily/static/js/components/people/people.mustache
+++ b/wtfamily/static/js/components/people/people.mustache
@@ -1,51 +1,29 @@
 <div class="container">
   <div class="row">
+
+    <!-- List -->
     <div class="col-md-4" style="overflow-y: scroll; height: 100%;">
-      {{#if object_groups.isPending}}
-        Loading groups...
-      {{else}}
-        {{#if object_groups }}
-          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-            {{#each object_groups.value}}
-                <div class="panel panel-default">
-                    <div class="panel-heading" role="tab"
-                        id="heading-namegroup-{{index}}">
-                      <h4 class="panel-title"
-                        can-click="selectGroup"
-                        data-toggle="collapse"
-                        data-parent="#accordion"
-                        data-target="#collapse-namegroup-{{index}}"
-                        aria-expanded="false"
-                        aria-controls="collapse-namegroup-{{index}}">
-                      {{name}} ({{person_ids.length}})
-                    </h4>
-                  </div>
-                  <div id="collapse-namegroup-{{index}}"
-                      class="panel-collapse collapse" role="tabpanel"
-                      aria-labelledby="heading-namegroup-{{index}}">
-                    {{#if object_list.isPending}}
-                      Loading items...
-                    {{else}}
-                      {{#if object_list }}
-                        <div class="list-group">
-                          {{#each object_list.value}}
-                            <button type="button" can-click="selectObject"
-                                class="list-group-item" title="{{ id }}">{{ first_and_last_names }} ({{ birth }})</button>
-                          {{/object_list}}
-                        </div>
-                      {{else}}
-                        Nothing to show.
-                      {{/if}}
-                    {{/if}}
-                  </div>
-                </div>
-            {{/object_groups}}
-          </div>
+
+        <input type="text" placeholder="Filter by name" {($value)}="filterQuery" />
+
+        {{#if object_list.isPending}}
+          <p>Loading items...</p>
         {{else}}
-          No name groups to show.
+          {{#if object_list }}
+            <div class="list-group">
+              {{#each object_list.value}}
+                <button type="button" can-click="selectObject" class="list-group-item" title="{{ id }}">
+                    {{ first_and_last_names }} ({{ birth }})
+                </button>
+              {{/object_list}}
+            </div>
+          {{else}}
+            Nothing to show.
+          {{/if}}
         {{/if}}
-      {{/if}}
     </div>
+
+    <!-- Detail -->
     <div class="col-md-8">
       {{#if selectedObject.isPending }}
         Loading object...
