Include a small FamilyTree on person detail panel

--- a/wtfamily/static/js/components/people/people.mustache
+++ b/wtfamily/static/js/components/people/people.mustache
@@ -55,6 +55,8 @@
           <p>Parents' families: {{ child_in_families.toSource }}</p>
           <p>Parent in families: {{ parent_in_families.toSource }}</p>
 
+          <wtf-familytree {initial-people-ids}="id"></wtf-familytree>
+
         {{/with}}
       {{/if}}
 
