--- a/wtfamily/static/js/components/sources/sources.mustache
+++ b/wtfamily/static/js/components/sources/sources.mustache
@@ -111,7 +111,7 @@
 
                       {{^if events.value.length}}
                         <div class="alert alert-info" role="alert">
-                          <strong>Missing facts.</strong>
+                          <strong>Missing inferred facts.</strong>
                           This citation may need some research.
                         </div>
                       {{/if}}
