--- a/wtfamily/static/js/components/places/places.mustache
+++ b/wtfamily/static/js/components/places/places.mustache
@@ -1,20 +1,46 @@
-<div class="row">
-  <div class="col-md6">
-    {{#if object_list.isPending}}
-      Loading...
-    {{else}}
-      {{#if object_list}}
-        <ul>
-          {{#each object_list.value}}
-            <li>{{id}} — {{name}}</li>
-          {{/object_list}}
-        </ul>
+<div class="container">
+  <div class="row">
+
+    <!-- List -->
+    <div class="col-md-4" style="overflow-y: scroll; height: 100%;">
+
+        <input type="text" placeholder="Filter by name" {($value)}="filterQuery" />
+
+        {{#if object_list.isPending}}
+          <p>Loading items...</p>
+        {{else}}
+          {{#if object_list }}
+            <div class="list-group">
+              {{#each object_list.value}}
+                <button type="button" can-click="selectObject" class="list-group-item" title="{{ id }}">
+                  {{ name }}
+                </button>
+              {{/object_list}}
+            </div>
+          {{else}}
+            Nothing to show.
+          {{/if}}
+        {{/if}}
+    </div>
+
+    <!-- Detail -->
+    <div class="col-md-8">
+      {{#if selectedObject.isPending }}
+        Loading object...
       {{else}}
-        Nothing to display.
+        {{#with selectedObject}}
+
+          <h2>{{ name }}</h2>
+
+          {{#if coords}}
+            <p>{{ coords.lat }}, {{ coords.lng }}</p>
+
+            <wtf-map-places {default-position}="coords" {default-zoom}="zoom"></wtf-map-places>
+          {{/if}}
+
+        {{/with}}
       {{/if}}
-    {{/if}}
-  </div>
-  <div class="col-md6">
-      (here could be the quickview...)
+
+    </div>
   </div>
 </div>
