--- a/wtfamily/static/js/header.mustache
+++ b/wtfamily/static/js/header.mustache
@@ -2,21 +2,20 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/a/">WhatTheFamily</a>
+        <li class="{{#eq page 'home'}}active{{/eq}}">
+          <a class="navbar-brand" can-href='{page="home"}'>WhatTheFamily</a>
+        </li>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="{{#eq page 'home'}}active{{/eq}}">
-            <a can-href='{page="home"}'>Home</a>
-          </li>
           <li class="{{#eq page 'sources'}}active{{/eq}}">
-            <a can-href='{page="sources"}'>Sources</a>
+            <a can-href='{page="sources"}'><span class="glyphicon glyphicon-book"></span> Sources</a>
           </li>
           <li class="{{#eq page 'people'}}active{{/eq}}">
-            <a can-href='{page="people"}'>People</a>
+            <a can-href='{page="people"}'><span class="glyphicon glyphicon-user"></span> People</a>
           </li>
           <li class="{{#eq page 'places'}}active{{/eq}}">
-            <a can-href='{page="places"}'>Places</a>
+            <a can-href='{page="places"}'><span class="glyphicon glyphicon-map-marker"></span> Places</a>
           </li>
           <li class="{{#eq page 'events'}}active{{/eq}}">
             <a can-href='{page="events"}'>Events</a>
