Use persistent obj selection in People and Sources

--- a/wtfamily/static/js/header.mustache
+++ b/wtfamily/static/js/header.mustache
@@ -9,22 +9,22 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="{{#eq page 'sources'}}active{{/eq}}">
-            <a can-href='{page="sources"}'><span class="glyphicon glyphicon-book"></span> Sources</a>
+            <a can-href='{page="sources", objId=""}'><span class="glyphicon glyphicon-book"></span> Sources</a>
           </li>
           <li class="{{#eq page 'people'}}active{{/eq}}">
-            <a can-href='{page="people"}'><span class="glyphicon glyphicon-user"></span> People</a>
+            <a can-href='{page="people", objId=""}'><span class="glyphicon glyphicon-user"></span> People</a>
           </li>
           <li class="{{#eq page 'places'}}active{{/eq}}">
-            <a can-href='{page="places"}'><span class="glyphicon glyphicon-map-marker"></span> Places</a>
+            <a can-href='{page="places", objId=""}'><span class="glyphicon glyphicon-map-marker"></span> Places</a>
           </li>
           <li class="{{#eq page 'events'}}active{{/eq}}">
-            <a can-href='{page="events"}'>Events</a>
+            <a can-href='{page="events", objId=""}'>Events</a>
           </li>
           <li class="{{#eq page 'familytree'}}active{{/eq}}">
-            <a can-href='{page="familytree"}'>Family Tree</a>
+            <a can-href='{page="familytree", objId=""}'>Family Tree</a>
           </li>
           <li class="{{#eq page 'map'}}active{{/eq}}">
-            <a can-href='{page="map"}'>Map</a>
+            <a can-href='{page="map", objId=""}'>Map</a>
           </li>
         </ul>  <!--/.nav-->
       </div>  <!--/#navbar.navbar-collapse-->
